[package]
name = "dict"
description = "minimal dictionary api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
hyper = "0.14.20"
serde = {version ="1.0.143", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
