[package]
name = "spork"
description = "minimal dictionary api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spork"
path = "src/main.rs"


[dependencies]
axum = "0.5.15"
hyper = "0.14.20"
reqwest = {version="0.11.11", features = ["json"]}
serde = {version ="1.0.143", features = ["derive"]}
serde_json = "1.0.83"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
